--- a/src/main/resources/views/login.fxml
+++ b/src/main/resources/views/login.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="loginAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.LoginController">
+<AnchorPane fx:id="loginAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="230.0" prefWidth="340.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.LoginController">
    <children>
       <Button fx:id="loginButton" layoutX="144.0" layoutY="159.0" mnemonicParsing="false" onMouseClicked="#login" text="Login" />
-      <TextField fx:id="loginTextField" layoutX="96.0" layoutY="57.0" promptText="login" />
+      <TextField fx:id="loginTextField" layoutX="96.0" layoutY="57.0" promptText="username" />
       <PasswordField fx:id="loginPasswordField" layoutX="96.0" layoutY="103.0" promptText="password" />
       <Label fx:id="statusLabel" layoutX="156.0" layoutY="14.0" />
    </children>
